Adiciona input radio e checkbox

--- a/index.html
+++ b/index.html
@@ -252,6 +252,36 @@
           </label>
         </div>
         <div class="how-to-use"><code></code></div>
+        <div class="example" id="radio">
+          <label>
+            <input type="radio" name="radio" checked>
+            <span class="small">Radio</span>
+          </label>
+          <label>
+            <input type="radio" name="radio">
+            <span>Radio 2</span>
+          </label>
+          <label>
+            <input type="radio" name="radio">
+            <span class="large">Radio 3</span>
+          </label>
+        </div>
+        <div class="how-to-use"><code></code></div>
+        <div class="example" id="radio">
+          <label>
+            <input type="checkbox" name="checkbox1">
+            <span class="small">Label</span>
+          </label>
+          <label>
+            <input type="checkbox" name="checkbox2">
+            <span>Checkbox 2</span>
+          </label>
+          <label>
+            <input type="checkbox" name="checkbox3" checked>
+            <span class="large">Checkbox 3</span>
+          </label>
+        </div>
+        <div class="how-to-use"><code></code></div>
       </section>
     </section>
   </div>
